--- a/index.html
+++ b/index.html
@@ -1,1 +1,219 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Lisa H. Smith Resume</title>
+    </head>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            color: #333;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h1,
+        h2 {
+            color: #007bff;
+        }
+        .header {
+            text-align: center;
+        }
+        .header h1 {
+            margin: 10px 0;
+        }
+        .contact {
+            margin: 10px 0;
+            font-size: 14px;
+        }
+        .contact a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .section {
+            margin: 20px 0;
+        }
+        .section h2 {
+            margin-bottom: 10px;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 5px;
+        }
+        .item {
+            margin-bottom: 15px;
+        }
+        .item h3 {
+            margin: 0;
+            font-size: 18px;
+            color: #555;
+        }
+        .item p {
+            margin: 5px 0;
+            font-size: 14px;
+        }
+        .skills ul {
+            list-style: none;
+            padding: 0;
+        }
+        .skills ul li {
+            display: inline-block;
+            background: #007bff;
+            color: #fff;
+            padding: 5px 10px;
+            margin: 5px 5px 5px 0;
+            border-radius: 4px;
+        }
+    </style>
+
+    <body>
+        <main class="container">
+            <section class="header">
+                <h1>Lisa H. Smith</h1>
+                <p class="contact">
+                    Email:
+                    <a href="mailto:yourname@example.com"
+                        >aprojectoflove@gmail.com</a
+                    >
+                    | Phone: (606) 767-1876 | LinkedIn:
+                    <a href="#">linkedin.com/in/lisa-h-smith-shrm-scp-pmp-49140948</a>
+                </p>
+            </section>
+            <section class="section">
+                <h2>Summary</h2>
+                <p>
+                    Dynamic and results driven Contact Center Professional with 25 years of experience leading
+                    operations, human resources and process engineering.  Proven track record of optimizing
+                    customer experience, driving operational efficiencies, and implementing strategic process
+                    improvements.  Adept at building high-performing teams, enhancing workforce engagement, and
+                    leveraging data-driven insights to maximize productivity and service excellence.  A strategic
+                    leader with expertise in streamlining workflows, reducing costs, and aligning business
+                    objectives with customer-centric solutions.  Passionate about innovation, continuous improvement,
+                    and fostering a culture of excellence.
+                </p>
+            </section>
+            <section class="section">
+                <h2>Work Experience</h2>
+                <div class="item">
+                    <h3>Director of Process Engineering - KECH, Inc.</h3>
+                    <p>October 2023 - Present</p>
+                    <p>
+                        Ensures that processes are efficient, compliant, and optimized to meet the specific
+                        needs and requirements of government and commercial clients while deliverying high-quality
+                        results.  Develops and implements process improvements, standard operating procedures,
+                        and best practices to drive operational excellence and enhance customer satisfaction.
+                        Collaborates with cross-functional teams to identify and resolve operational challenges,
+                        mitigate risks, and achieve business objectives.  Leads process engineering initiatives
+                        to streamline workflows, reduce costs, and improve service delivery. As the Management
+                        Representative, led the organization to achieve ISO 9001:2015 certification. Led the 
+                        design and implementation of an applicant tracking system, reducing time to fill by 25%. 
+                        This design enabled KECH to be compliant to the OFCCP regulations.  Implemented a new
+                        attendance policy that reduced absenteeism by 20%.
+
+                
+
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Director - Senture, LLC.</h3>
+                    <p>June 2009 - October 2023</p>
+                    <p>
+                        Key responsibilities included leading a team of 2,000+ employees, managing daily operations,
+                        and ensuring that performance metrics were not only met, but exceeded.  Developed and implemented strategic
+                        initiatives to optimize customer experience, drive operational efficiencies, and improve
+                        service delivery.  Led process improvement projects to enhance productivity, reduce costs,
+                        and increase revenue.  Collaborated with cross-functional teams to identify and resolve
+                        operational challenges, mitigate risks, and achieve business objectives.  Implemented a high-quality
+                        plan based on Six Sigma principles that resulted in a 30% increase in customer satisfaction.
+                        Led an HR team of 40 and implemented a new benefits program that reduced insurance costs by 15%,
+                        hired over  3,000 employees in 6 months, and processed 2,000 employees successfully for Federal
+                        Security Clearance.  Responsible for $12M budget and achieved a 10% reduction in costs.               
+
+                    </p>
+                </div>
+            </section>
+            <div class="section">
+                <h2>Education</h2>
+                <div class="item">
+                    <h3>Bachelor of Arts - Eastern Kentucky University</h3>
+                    <p>1997</p>
+                </div>
+                
+            </section>
+            <section class="section">
+                <h2>Skills</h2>
+                <div class="skills">
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>Python</li>
+                        <li>Lean Six Sigma Master Black Belt</li>
+                        <li>Project Manager Professional (PMP)</li>
+                        <li>SHRM Senior Certified Professional (SHRM-SCP)</li>
+                        <li>Strategic Planning</li>
+                        <li>Change Management</li>
+                        <li>Team Leadership</li>
+                        <li>Process Improvement</li>
+                    </ul>
+                </div>
+            </section>
+            <section class="section">
+                <h2>Projects</h2>
+                <div class="item">
+                    <h3>Hello HTML</h3>
+                    <p>
+                        The Hello HTML project incorporated the basics of HTML structure.  This project was pushed
+                        to GitHub.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>About Me</h3>
+                    <p>
+                        The About Me project was a web development project.  It included HTML structure and syntax,
+                        CSS styling, and JavaScript functionality.  The project included a short biography, hobbies, 
+                        and 2025 goals. This project incorporated essential elements such as headings, paragraphys,
+                        and lists. This project was pushed to GitHub.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Correct the HTML</h3>
+                    <p>
+                        In the Correct the HTML project, I applied my knowledge of HTML structure and syntax to
+                        correct a webpage that was not displaying correctly, ensuring the code was properly formatted
+                        functional, and accessible. This project was pushed to GitHub.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Resume</h3>
+                    <p>
+                        The About Me project was a web development project.  It included HTML structure and syntax,
+                        CSS styling, and JavaScript functionality.  The project included a short biography, hobbies, 
+                        and 2025 goals. This project incorporated essential elements such as headings, paragraphys,
+                        and lists. This project was pushed to GitHub and published to GitHub Pages.
+                    </p>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+            </section>
+        </main>
+    </body>
+</html>
