updated resume project paragraph

--- a/index.html
+++ b/index.html
@@ -196,10 +196,12 @@
                 <div class="item">
                     <h3>Resume</h3>
                     <p>
-                        The About Me project was a web development project.  It included HTML structure and syntax,
-                        CSS styling, and JavaScript functionality.  The project included a short biography, hobbies, 
-                        and 2025 goals. This project incorporated essential elements such as headings, paragraphys,
-                        and lists. This project was pushed to GitHub and published to GitHub Pages.
+                        The Resume project was a web development project.  It expanded the knowledged used in the About Me 
+                        project to include more advanced HTML structure and syntax, CSS styling, and JavaScript functionality.
+                        The project featured use of sections, dividers, and classes to organize content.  The project included
+                        a short biography, work experience, education, skills, and projects.  This project was pushed to GitHub
+                        and published to GitHub Pages. 
+                        
                     </p>
                 </div>
 
